Temp commit with working functionality, tests to fix (SQUASH ME)

--- a/app/assets/stylesheets/portal/fulfillment.css.sass
+++ b/app/assets/stylesheets/portal/fulfillment.css.sass
@@ -364,4 +364,12 @@ input.in_process, input.complete
     padding-right: 10px
     text-align: left
 
-  
+#cwf_building_dialog
+  h3
+    float: left
+    padding-top: 8px
+  img
+    float: right
+
+.no-close .ui-dialog-titlebar-close
+  display: none
